--- a/web-version/server/package.json
+++ b/web-version/server/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "pngjs": "^3.4.0"
+  }
 }
